[project]
name = "gbp-testkit"
dynamic = ["version"]
description = "Gentoo Build Publisher testing tools"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]
dependencies = ["factory-boy>=3.3.3", "django>=5.1.6", "unittest-fixtures @ git+https://github.com/enku/unittest-fixtures.git", "types-requests>=2.32.0.20241016"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL3+"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "typos>=1.29.7",
    "pylint>=3.3.4",
    "coverage[toml]>=7.6.12",
    "pylint-django>=2.6.1",
    "django-stubs>=5.1.3",
    "gentoo-build-publisher>=2.3.0",
]

[tool.black]
skip-magic-trailing-comma = true

[tool.mypy]
plugins =["mypy_django_plugin.main"]
files = ["src"]
mypy_path = ["tests", "stubs"]
strict = true

[tool.django-stubs]
django_settings_module = "settings"

[tool.pylint.master]
load-plugins = "pylint_django,pylint.extensions.bad_builtin"
django-settings-module = "settings"
init-hook = "import sys; sys.path.insert(0, 'tests')"
bad-functions = "print"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
branch = true
source = ["gbp_testkit"]

[tool.pdm]
distribution = true
version = { source = "scm" }

